# kappa

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/kappa-architecture/: SKILL.md
.claude/skills/langgraph-patterns/: SKILL.md
.claude/skills/postgresql-schema/: SKILL.md
.claude/skills/python-async/: SKILL.md
docs/: api_reference.md  architecture.md  production_checklist.md  user_guide.md
scripts/: build_dashboard.sh  dev_setup.sh  setup_db.sql  update_claude_md.py
src/: __init__.py
src/api/: __init__.py  main.py  websocket.py
src/api/routes/: __init__.py  metrics.py  projects.py  sessions.py  tasks.py
src/chat/: __init__.py  interface.py
src/cli/: __init__.py  commands.py  main.py
src/conflict/: __init__.py  detector.py  merge_engine.py  resolver.py  strategies.py
src/core/: __init__.py  config.py  orchestrator.py  state.py
src/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/dashboard/src/: App.tsx  index.css  types.ts
src/dashboard/src/components/: Header.tsx  LogViewer.tsx  MetricsPanel.tsx  ProgressRing.tsx  ProjectSidebar.tsx  SessionGrid.tsx  TabNavigation.tsx  WaveTimeline.tsx
src/dashboard/src/hooks/: useMetrics.ts  useProjects.ts  useWebSocket.ts
src/decomposition/: __init__.py  dependency_resolver.py  executor.py  models.py  parser.py  task_generator.py  validator.py
src/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
src/knowledge/: __init__.py  claude_md.py  context_manager.py  database.py  models.py
src/monitoring/: __init__.py  health_check.py  metrics.py  session_monitor.py
src/optimization/: __init__.py  performance.py
src/prompts/: __init__.py  builder.py  templates.py
src/sessions/: __init__.py  base.py  router.py  terminal.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_bali_graphics.py  test_full_workflow.py  test_real_execution.py
tests/integration/: __init__.py  test_conflict_integration.py  test_graph.py  test_orchestrator.py  test_parallel_execution.py  test_sessions.py  test_user_flow.py
tests/unit/: __init__.py  test_api.py  test_chat.py  test_conflict_detector.py  test_conflict_resolver.py  test_context.py  test_decomposition.py  test_executor.py  test_merge_engine.py  test_parser.py  test_performance.py  test_resolver.py
